--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -22,4 +22,5 @@ Imports all project style components.
 // Modules
 @import "modules/nav";
 @import "modules/header";
-@import "modules/section";
+@import "modules/section-about";
+@import "modules/section-rooms";
