--- a/app/scss/base/_general.scss
+++ b/app/scss/base/_general.scss
@@ -1,32 +1,53 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style-type: none;
-    font-family: 'Open Sans';
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style-type: none;
+  font-family: "Open Sans";
 }
 
 html {
-    font-size: 15px;
+  font-size: 15px;
 
-    @media #{$max1400} {
-        font-size: 13px;
-    }
+  @media #{$max1400} {
+    font-size: 13px;
+  }
 
-    @media #{$max1199} {
-        font-size: 11px;
-    }
+  @media #{$max1199} {
+    font-size: 11px;
+  }
 
-    @media #{$max991} {
-        font-size: 10px;
-    }
+  @media #{$max991} {
+    font-size: 10px;
+  }
 }
 
 .wrapper {
-    width: 100%;
-    max-width: 1600px;
-    min-width: 280px;
-    margin: 0 auto;
-    overflow: hidden;
+  width: 100%;
+  max-width: 1600px;
+  min-width: 280px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.section {
+  padding: 5.5rem 13.6rem;
+
+  @media #{$max991} {
+    padding: 50px 100px;
+  }
+  @media #{$max767} {
+    padding: 30px;
+  }
+
+  &__container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__btn {
+    width: 18.3rem;
+    height: 5.5rem;
+  }
 }
