--- a/app/scss/components/_section-title.scss
+++ b/app/scss/components/_section-title.scss
@@ -50,4 +50,33 @@
   .star-elem--section {
     width: 20px;
   }
+
+  &__desc {
+    color: #fff;
+    background-color: #003f8c;
+    font-size: 1.33rem;
+    padding: 2rem 3rem 2rem 13.6rem;
+    width: 163%;
+    // position: absolute;
+    // top: 0;
+    // left: -50%;
+    // z-index: 5;
+
+    width: calc(63% + 13.6rem);
+    position: absolute;
+    top: 30px;
+    z-index: 2;
+    left: -13.6rem;
+    text-align: justify;
+    font-weight: 300;
+    top: -30px;
+
+    @media #{$max575} {
+      position: relative;
+      width: calc(100% + 60px);
+      left: -30px;
+      padding: 2rem 3rem 2rem 3rem;
+      margin-top: 50px;
+    }
+  }
 }
