--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -24,3 +24,4 @@ Imports all project style components.
 @import "modules/header";
 @import "modules/section-about";
 @import "modules/section-rooms";
+@import "modules/section-restaurants";
