--- a/app/scss/components/_section-title.scss
+++ b/app/scss/components/_section-title.scss
@@ -6,6 +6,12 @@
     &--right {
       text-align: right;
     }
+
+    &--restaurants {
+      @media #{$max575} {
+        padding-bottom: 0;
+      }
+    }
   }
   &__title {
     font-size: 2.7rem;
@@ -19,6 +25,14 @@
 
     &--right {
       margin: 0 0 0 auto;
+    }
+
+    &--wide {
+      width: 300px;
+
+      @media #{$max1199} {
+        width: 220px;
+      }
     }
   }
 
@@ -35,6 +49,14 @@
 
     &--right {
       right: 150px;
+    }
+
+    &--wide-title {
+      left: 300px;
+
+      @media #{$max1199} {
+        left: 220px;
+      }
     }
   }
 
@@ -55,7 +77,6 @@
     color: #fff;
     background-color: #003f8c;
     font-size: 1.33rem;
-    padding: 2rem 3rem 2rem 13.6rem;
     width: 163%;
     // position: absolute;
     // top: 0;
@@ -66,10 +87,19 @@
     position: absolute;
     top: 30px;
     z-index: 2;
-    left: -13.6rem;
     text-align: justify;
     font-weight: 300;
     top: -30px;
+
+    &--left {
+      left: -13.6rem;
+      padding: 2rem 3rem 2rem 13.6rem;
+    }
+
+    &--right {
+      right: -13.6rem;
+      padding: 2rem 13.6rem 2rem 3rem;
+    }
 
     @media #{$max575} {
       position: relative;
