--- a/app/scss/modules/_section-rooms.scss
+++ b/app/scss/modules/_section-rooms.scss
@@ -65,7 +65,7 @@
       }
   
       @media #{$max767} {
-        padding-left: 10px;
+        padding-left: 0;
       }
     }
 
@@ -79,23 +79,7 @@
       }
   
       @media #{$max767} {
-        padding-right: 10px;
-      }
-    }
-
-    &__title {
-      padding-bottom: 1.5rem;
-      font-size: 2.45rem;
-      font-weight: 300;
-      color: #003f8c;
-
-      @media #{$max991} {
-        padding-bottom: 5px;
-      }
-
-      &-color {
-        color: #ffb01e;
-        font-weight: 600;
+        padding-right: 0;
       }
     }
 
