--- a/app/scss/modules/_section-restaurants.scss
+++ b/app/scss/modules/_section-restaurants.scss
@@ -19,6 +19,46 @@
         padding-top: 0;
       }
     }
+
+    .content-box {
+
+      &__icons {
+        display: flex;
+        height: 80px;
+        align-items: center;
+      }
+      
+      &__icons-container {
+        width: 50%;
+      }
+
+      &__icon {
+        display: inline-block;
+        height: 35px;
+        width: 50px;
+        vertical-align: middle;
+
+        @media #{$max575} {
+          width: 30px;
+        }
+      }
+
+      &__desc {
+        display: inline-block;
+        padding-left: 1rem;
+        width: calc(100% - 60px);
+        text-align: left;
+        font-size: 12px;
+        font-weight: 600;
+        color: #003f8c;
+        vertical-align: middle;
+        line-height: 19px;
+
+        @media #{$max575} {
+          padding-left: 5px;
+        }
+      }
+    }
   
     &__content-part {
       padding-bottom: 1.3rem;
