--- a/app/scss/base/_general.scss
+++ b/app/scss/base/_general.scss
@@ -66,6 +66,11 @@ html {
         padding-top: 0;
       }
     }
+
+    &--contact {
+      display: flex;
+      justify-content: flex-end;
+    }
   }
 
   &__btn {
