--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -25,3 +25,4 @@ Imports all project style components.
 @import "modules/section-about";
 @import "modules/section-rooms";
 @import "modules/section-restaurants";
+@import "modules/section-contact";
