--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -1,14 +1,68 @@
 .contact {
+  padding-left: 0;
+  padding-bottom: 0;
+
+  @media #{$max575} {
+    padding: 30px;
+  }
+
+  .section__container {
+    display: flex;
+
+    @media #{$max575} {
+      flex-wrap: wrap;
+      flex-direction: column-reverse;
+    }
+  }
+  &__map {
+    width: 60%;
+    background: url(../images/photos/map.png);
+    background-repeat: no-repeat;
+    background-size: 1450px;
+    background-position-x: 80%;
+    margin-top: -30px;
+    padding-bottom: 5.5rem;
+
+    @media #{$max991} {
+      background: url(../images/photos/map.png);
+      background-size: 1170px;
+      background-position-x: 80%;
+      background-repeat: no-repeat;
+    }
+
+    @media #{$max767} {
+      width: calc(100% - 290px);
+      background: url(../images/photos/map.png);
+      background-size: 1170px;
+      background-position-x: -625px;
+      background-repeat: no-repeat;
+    }
+
+    @media #{$max575} {
+      width: 100%;
+      height: 200px;
+      background: url(../images/photos/map.png);
+      background-size: 1000px;
+      background-position-x: 64%;
+      background-position-y: -104px;
+      background-repeat: no-repeat;
+    }
+  }
+
   &__content {
     display: inline-block;
-    width: 100%;
-    max-width: 500px;
+    width: 40%;
+    min-width: 260px;
+    padding-bottom: 5.5rem;
+    padding-top: 70px;
 
     @media #{$max991} {
     }
     @media #{$max767} {
     }
     @media #{$max575} {
+      width: 100%;
+      padding-top: 0px;
     }
   }
 
@@ -17,36 +71,60 @@
       display: flex;
       width: 100%;
       align-items: center;
+      padding-bottom: 3rem;
     }
 
-    &__icons-container {
+    &__icon-container {
       width: 33%;
     }
 
     &__icon {
       height: 30px;
       max-width: 30px;
+      margin: 0 auto;
+      display: block;
     }
 
     &__desc {
       width: 100%;
+      height: 40px;
+      text-align: center;
     }
 
     &__form {
-        width: 100%;
-      }
-    
-      &__label {
-        width: 100%;
-        display: inline-block;
-      }
+      width: 100%;
+    }
 
-      &__input {
-          width: 100%;
+    &__label {
+      width: 100%;
+      display: inline-block;
+      text-align: justify;
+    }
+
+    &__input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid rgb(200, 200, 200);
+      margin-bottom: 10px;
+
+      &::placeholder {
+        color: #000;
       }
-    
-      &__textarea {
-        width: 100%;
+    }
+
+    &__textarea {
+      width: 100%;
+      height: 6rem;
+      padding: 10px;
+      border: 1px solid rgb(200, 200, 200);
+      margin-bottom: 10px;
+
+      &::placeholder {
+        color: #000;
       }
+    }
+
+    &__checkbox {
+    }
   }
 }
