--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -26,3 +26,4 @@ Imports all project style components.
 @import "modules/section-rooms";
 @import "modules/section-restaurants";
 @import "modules/section-contact";
+@import "modules/footer";
